ci: Improve CI workflow with new test and recipe execution steps
- Add new job for executing tests module
- Add new job for executing examples module recipes
- Rename existing CI jobs to be more descriptive
- Improve overall CI workflow by adding dedicated test and recipe execution steps

--- a/.github/workflows/ci-mod-module-template.yml
+++ b/.github/workflows/ci-mod-module-template.yml
@@ -66,7 +66,7 @@ jobs:
 
   main-module-ci:
     needs: dagger-build
-    name: 🔬 Main Module CI
+    name: 🔬 Main Module Continuous Integration
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -104,7 +104,7 @@ jobs:
 
   tests-module-ci:
     needs: dagger-build
-    name: 🧪 Tests Module CI
+    name: 🧪 Tests Module Continuous Integration
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -140,6 +140,26 @@ jobs:
       - name: 📝 Lint Tests Module
         run: cd ${{ env.MODULE }}/tests && golangci-lint run --config=../../.golangci.yml --verbose
 
+  tests-module-test-execution:
+    needs: tests-module-ci
+    name: 🚀 Tests Module Test Execution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: 🧪 Dagger Develop Tests Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ env.MODULE }}/tests
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: 💣 Run Tests
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
@@ -153,7 +173,7 @@ jobs:
 
   examples-go-module-ci:
     needs: dagger-build
-    name: 📄 Examples Go Module CI
+    name: 📄 Examples Go Module Continuous Integration
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -188,6 +208,26 @@ jobs:
 
       - name: 📝 Lint Examples Module
         run: cd ${{ env.MODULE }}/examples/go && golangci-lint run --config=../../../.golangci.yml --verbose
+
+  examples-go-module-recipe-execution:
+    needs: examples-go-module-ci
+    name: 🥗 Examples Go Module Recipe Execution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: 📄 Dagger Develop Examples Module
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        with:
+          verb: develop
+          module: ${{ env.MODULE }}/examples/go
+          version: ${{ env.DAGGER_VERSION }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 🥗 Run Recipes
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
