--- a/.github/workflows/ci-mod-module-template-light.yml
+++ b/.github/workflows/ci-mod-module-template-light.yml
@@ -1,4 +1,4 @@
-name: CI🧹{{.module_name_pkg}}📦
+name: CI🧹module-template-light📦
 
 on:
   push:
@@ -6,11 +6,11 @@ on:
       - main
       - master
     paths:
-      - {{.module_name_pkg}}/**
+      - module-template-light/**
   pull_request:
     paths:
-      - {{.module_name_pkg}}/**
-      - .github/workflows/ci-mod-{{.module_name_pkg}}.yml
+      - module-template-light/**
+      - .github/workflows/ci-mod-module-template-light.yml
   workflow_dispatch:
 
 permissions:
@@ -22,7 +22,7 @@ env:
   GO_VERSION: "1.22"
   DAGGER_VERSION: 0.14.0
   GOLANGCI_LINT_VERSION: v1.62.0
-  MODULE: {{.module_name_pkg}}
+  MODULE: module-template-light
 
 jobs:
   dagger-build:
