ci: Update GitHub Actions workflow for PR labeling
The changes in this commit update the GitHub Actions workflow for automatically assigning labels to pull requests. The key changes are:

- Update the trigger event from `pull_request` to `pull_request_target` to ensure the workflow can access the pull request context.
- Remove the `size-label-action` step, as the labeling functionality is now handled by the `actions/labeler` action.
- Add a new `labeler` job that uses the `actions/labeler` action to sync labels based on the updated `.github/labeler.yml` configuration.

The `.github/labeler.yml` file has also been updated with a more comprehensive set of label rules, including:

- Core changes
- Documentation changes
- CI/CD changes
- Dependencies changes
- Test changes
- Examples changes
- Breaking changes
- Feature changes
- Bug fix changes
- Maintenance changes

These label rules will help improve the organization and triaging of pull requests in the repository.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -21,3 +21,75 @@ source:
 ci/cd:
   - changed-files:
       - any-glob-to-any-file: ["**/.github/workflows/*", "**/.gitlab-ci.yml"]
+
+# Core changes
+core:
+- changed-files:
+  - any-glob-to-any-file: 'core/**/*'
+
+# Documentation changes
+documentation:
+- changed-files:
+  - any-glob-to-any-file: 
+    - '**/*.md'
+    - 'docs/**/*'
+    - '**/README.md'
+    - '**/CONTRIBUTING.md'
+
+# CI/CD changes
+ci:
+- changed-files:
+  - any-glob-to-any-file: '.github/**/*'
+
+# Dependencies changes
+dependencies:
+- changed-files:
+  - any-glob-to-any-file:
+    - '**/go.mod'
+    - '**/go.sum'
+    - '**/package.json'
+    - '**/package-lock.json'
+    - '**/yarn.lock'
+
+# Test changes
+tests:
+- changed-files:
+  - any-glob-to-any-file: 
+    - '**/*_test.go'
+    - '**/test/**/*'
+    - '**/tests/**/*'
+
+# Examples changes
+examples:
+- changed-files:
+  - any-glob-to-any-file: 'examples/**/*'
+
+# Breaking changes label based on commit messages
+breaking:
+- head-branch: 
+  - '^breaking/'
+  - '^major/'
+
+# Feature changes label based on branch names
+feature:
+- head-branch: 
+  - '^feature/'
+  - '^feat/'
+
+# Bug fix changes label based on branch names
+bug:
+- head-branch: 
+  - '^fix/'
+  - '^bugfix/'
+  - '^bug/'
+
+# Maintenance changes
+maintenance:
+- changed-files:
+  - any-glob-to-any-file:
+    - '.gitignore'
+    - '.editorconfig'
+    - '.golangci.yml'
+    - 'Makefile'
+    - 'Justfile'
+    - '.dockerignore'
