feat: Improve YAML linting and formatting
- Add a new Go-based YAML formatter to automatically format YAML files
- Implement strict YAML linting for GitHub workflows, config files, and root YAML files
- Fail the workflow if YAML files need formatting, and provide instructions for running the formatter locally
- Increase the permissions of the GitHub Actions workflow to allow for commenting on pull requests and issues

--- a/.github/workflows/yaml-linter.yml
+++ b/.github/workflows/yaml-linter.yml
@@ -1,8 +1,15 @@
 name: Yaml Linter and Formatter
+
 on:
   workflow_dispatch:
   push:
   pull_request:
+
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  statuses: write
 
 jobs:
   yaml-lint-and-format:
@@ -10,37 +17,52 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+          cache: true
 
       - name: Install yamlfmt
-        run: |
-          go install github.com/google/yamlfmt/cmd/yamlfmt@latest
+        run: go install github.com/google/yamlfmt/cmd/yamlfmt@latest
 
       - name: Run yamlfmt
         run: |
           yamlfmt -config .yamlfmt.yml
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "YAML files need formatting. Please run 'yamlfmt' locally."
+            exit 1
+          fi
 
-      - name: Lint Workflows
+      - name: Lint GitHub Workflows
         uses: karancode/yamllint-github-action@v2.1.1
         with:
           yamllint_config_filepath: .yamllint.yml
           yamllint_file_or_dir: .github/workflows
-          yamllint_comment: "true"
+          yamllint_strict: true
+          yamllint_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Lint GitHub config yamls
+      - name: Lint GitHub Config Files
         uses: karancode/yamllint-github-action@v2.1.1
         with:
           yamllint_config_filepath: .yamllint.yml
           yamllint_file_or_dir: .github
-          yamllint_comment: "true"
+          yamllint_strict: true
+          yamllint_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Lint yaml files in root dir
+      - name: Lint Root YAML Files
         uses: karancode/yamllint-github-action@v2.1.1
         with:
           yamllint_config_filepath: .yamllint.yml
-          yamllint_comment: "true"
+          yamllint_file_or_dir: .
+          yamllint_strict: true
+          yamllint_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
