--- a/.github/workflows/yaml-linter.yml
+++ b/.github/workflows/yaml-linter.yml
@@ -16,40 +16,26 @@ jobs:
     name: YAML Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Lint Workflows
-        uses: ibiqlik/action-yamllint@v3
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          file_or_dir: .github/workflows/
-          config_file: .yamllint.yml
-          strict: true
-          format: github
+          python-version: "3.x"
 
-      - name: Lint GitHub Config
-        uses: ibiqlik/action-yamllint@v3
-        with:
-          file_or_dir: .github/
-          config_file: .yamllint.yml
-          strict: true
-          format: github
+      - name: Install yamllint
+        run: |
+          python -m pip install --upgrade pip
+          pip install yamllint
 
-      - name: Lint Root YAML Files
-        uses: ibiqlik/action-yamllint@v3
-        with:
-          file_or_dir: .
-          config_file: .yamllint.yml
-          strict: true
-          format: github
+      - name: Run yamllint
+        run: |
+          yamllint -c .yamllint.yml .
 
-      - name: Upload Lint Results
-        if: always()
-        uses: actions/upload-artifact@v4
+      - name: Run yamlfmt check
+        uses: docker://google/yamlfmt:v0.10.0
         with:
-          name: yamllint-results
-          path: |
-            ${{ steps.yaml-lint-workflows.outputs.logfile }}
-            ${{ steps.yaml-lint-config.outputs.logfile }}
-            ${{ steps.yaml-lint-root.outputs.logfile }}
+          args: -lint .
