feat: Update .goreleaser.yaml to use commit date instead of current date
docs: Update .github/config.yml with improved welcome messages

feat: Add fmtyaml recipe to format YAML files recursively

ci: Improve YAML linting in GitHub Actions workflows

style: Auto-format pre-commit hooks

chore: Update pre-commit autoupdate

docs: Improve issue lock and close comments in .github/workflows

--- a/.github/workflows/cd-bump-dag-module-version.yml
+++ b/.github/workflows/cd-bump-dag-module-version.yml
@@ -11,8 +11,8 @@ permissions:
   pull-requests: write
 jobs:
   detect-modules:
-    if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged
-      == true && (github.base_ref == 'main' || github.base_ref == 'master'))
+    if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged == true && (github.base_ref == 'main'
+      || github.base_ref == 'master'))
     runs-on: ubuntu-latest
     outputs:
       changed_modules: ${{ steps.set-modules.outputs.changed_modules }}
