--- a/gotest/tests/testdata/golang/.goreleaser.yaml
+++ b/gotest/tests/testdata/golang/.goreleaser.yaml
@@ -23,8 +23,7 @@ builds:
     ldflags:
       # use commit date instead of current date as main.date
       # only needed if you actually use those things in your main package, otherwise can be ignored.
-      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{
-        .CommitDate }}
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
 release:
   prerelease: auto
 # proxies from the go mod proxy before building
