--- a/tflinter/config/presets/base-alpine.yaml
+++ b/tflinter/config/presets/base-alpine.yaml
@@ -65,8 +65,7 @@ paths:
     permissions: 0o755
 annotations:
   title: Base Alpine for TFLinter
-  description: A minimal Alpine base image built with APKO for TFLinter, optimized
-    for security and performance.
+  description: A minimal Alpine base image built with APKO for TFLinter, optimized for security and performance.
   version: 1.1.0
   vendor: github.com/Excoriate - Alex Torres
   licenses: Apache-2.0
