feat: Exclude testdata YAML files from linting and formatting
This commit excludes YAML files in the `testdata` directories from the YAML linting and formatting processes. This is to avoid unnecessary checks on test data files, which are not part of the production codebase.

The changes include:

- Updating the `.yamlfmt.yml` file to exclude `**/testdata/**/*.yaml` and `**/testdata/**/*.yml` files.
- Updating the `.github/workflows/yaml-linter.yml` file to exclude the same patterns from the YAML linter job.
- Updating the `.yamllint.yml` file to ignore the same patterns.
- Updating the `.pre-commit-config.yaml` file to exclude the `.*testdata/.*` pattern.

--- a/.github/workflows/yaml-linter.yml
+++ b/.github/workflows/yaml-linter.yml
@@ -47,6 +47,9 @@ jobs:
           file_or_dir: .
           format: github
           strict: false
+          exclude: |
+            **/testdata/**/*.yaml
+            **/testdata/**/*.yml
 
       - name: Upload Lint Results
         if: always()
