--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,8 @@ exclude: >-
     \.terragrunt-cache/|
     devenv/|
     node_modules/|
-    vendor/
+    vendor/|
+    .*/testdata/.*
   )
 
 repos:
